<resources>
    <string name="app_name">Aplicativos</string>
    <string name="Formulario">Formulário</string>
    <string name="site">Site</string>
    <string name="materia">Materia</string>
    <string name="data">Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="food">Food</string>
    <string name="agenda">Agenda</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">Cpf</string>
    <string name="telefone_com_ddd">Telefone com DDD</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone-Fixo</string>
    <string name="endereco">Endereço</string>
    <string name="telefone_celular">Telefone-Celular</string>
</resources>
