<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food.FormularioCadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formulario_cadastro_campo_nome_completo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_formulario_cadastro_titulo_dados_pessoais"
            android:drawableLeft="@drawable/ic_formulario_cadastro_titulo_dados_pessoais"
            android:drawablePadding="10dp"
            android:text="@string/dados_pessoais"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_nome_completo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/nome_completo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_campo_cpf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_nome_completo"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_nome_completo"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_nome_completo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_campo_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_campo_cpf"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_campo_cpf"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_campo_cpf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_com_ddd" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_campo_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_campo_telefone"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_campo_telefone"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_campo_telefone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_cadastro_campo_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_campo_email"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_campo_email"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_campo_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/formulario_cadastro_botao_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cadastrar"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_campo_senha" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>